apps/security/kyverno-policies/audit/disallow-host-namespaces.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: audit-disallow-host-namespaces
spec:
  admission: true
  validationFailureAction: Audit
  background: true
  emitWarning: false
  rules:
    - name: host-namespaces-disallowed
      skipBackgroundRequests: true
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces: [kube-system, kube-public, kube-node-lease, argocd, monitoring, kyverno, trivy-system]
      validate:
        allowExistingViolations: true
        message: "hostNetwork/hostPID/hostIPC should not be enabled."
        pattern:
          spec:
            =(hostNetwork): "false"
            =(hostPID): "false"
            =(hostIPC): "false"
