apps/security/kyverno-policies/audit/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: audit-disallow-privileged
  annotations:
    policies.kyverno.io/category: Pod Security
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: privileged-disallowed
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces: [kube-system, kube-public, kube-node-lease, argocd, monitoring, kyverno, trivy-system]
      validate:
        message: "Privileged containers are not allowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  =(privileged): "false"
