apps/security/kyverno-policies/audit/require-requests-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: audit-require-requests-limits
spec:
  admission: true
  validationFailureAction: Audit
  background: true
  emitWarning: false
  rules:
    - name: resources-required
      skipBackgroundRequests: true
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces: [kube-system, kube-public, kube-node-lease, argocd, monitoring, kyverno, trivy-system]
      validate:
        allowExistingViolations: true
        message: "CPU/memory requests and limits should be defined."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
