apps/security/kyverno-policies/audit/require-run-as-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: audit-require-run-as-non-root
spec:
  admission: true
  validationFailureAction: Audit
  background: true
  emitWarning: false
  rules:
    - name: run-as-non-root
      skipBackgroundRequests: true
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces: [kube-system, kube-public, kube-node-lease, argocd, monitoring, kyverno, trivy-system]
      validate:
        allowExistingViolations: true
        message: "runAsNonRoot should be true."
        pattern:
          spec:
            containers:
              - securityContext:
                  =(runAsNonRoot): true
