apps/security/kyverno-policies/audit/restrict-automount-serviceaccount-token.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: audit-restrict-automount-serviceaccount-token
spec:
  admission: true
  validationFailureAction: Audit
  background: true
  emitWarning: false
  rules:
    - name: automount-sa-token
      skipBackgroundRequests: true
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces: [kube-system, kube-public, kube-node-lease, argocd, monitoring, kyverno, trivy-system]
      validate:
        allowExistingViolations: true
        message: "automountServiceAccountToken should be false unless required."
        pattern:
          spec:
            =(automountServiceAccountToken): false
